# FinovateX

./: .coverage  .env.example  .golangci.yml  Dockerfile.go  Dockerfile.python  README.md  docker-compose.yml  docker-daemon.json  go.mod  go.sum  main.go  main_test.go  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cmd/migrate/: main.go
config/: redis.conf
config/grafana/: datasources.yml
config/grafana/dashboards/: dashboard-config.yml
config/grafana/dashboards/application/: finovatex-app.json
config/grafana/dashboards/infrastructure/: system-overview.json
config/nats/: jetstream.conf
config/otel/: otel-collector-config.yaml
config/prometheus/: prometheus.yml
config/promtail/: promtail.yml
examples/: nats_client_example.go
internal/database/: connection.go  migrate.go
internal/health/: health.go
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  README.md
scripts/: docker-health-check.sh  init-db.sql  init-nats-streams.ps1  migrate.ps1  start-services.ps1  test-ci.ps1  test-health-checks.ps1  test-migration.ps1
src/: __init__.py
src/utils/: __init__.py  config.py  logger.py
tests/: app_integration_test.go  nats_integration_test.go  test_app_integration.py  test_nats_simple.py  test_utils.py
